Actualización de perfil y habilidades

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -30,8 +30,8 @@ import SocialPill from "../components/SocialPill.astro";
   <p
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    <strong>Desarrollador Web.</strong> Especializado en <strong>MERN stack</strong> y actualmente aprendiendo React Native para desarrollo de aplicaciones
-    móviles.
+    <strong>Desarrollador Web.</strong> Especializado en <strong>MERN stack</strong> y Desarrollo de Aplicaciones de <strong>escritorio</strong>
+      con Java y C#.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:jyaxon-2019386@kinal.edu.gt">
