--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,7 +4,7 @@ import ExperienceItem from "./ExperienceItem.astro";
 const EXPERIENCIE = [
   {
     date: "Actualmente...",
-    title: "Desarrollador Jr en Aplicaciones Web",
+    title: "Analista Programador en Aplicaciones Web y de Escritorio",
     description:
       "Actualmente, soy un desarrollador junior con un enfoque en la creación y desarrollo de aplicaciones web utilizando MERN stack (MongoDB, Express.js, React.js, Node.js), así como otros lenguajes y tecnologías como JavaScript, HTML, CSS, Java, MongoDB y MySQL. Me apasiona construir soluciones innovadoras y funcionales para diversas plataformas",
   },
