--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -17,7 +17,7 @@
     </p>
 
     <p>
-      Culminé mis estudios a nivel medio en el colegio <strong>Centro Educativo Técnico Laboral Kinal</strong>. Me encanta enfocarme en la parte del rendimiento, para ofrecer la mejora experiencia al usuario
+      Culminé mis estudios a nivel medio en el colegio <strong>Centro Educativo Técnico Laboral Kinal</strong>. Me encanta enfocarme en la parte del rendimiento, para ofrecer la mejora experiencia al usuario.
   </div>
 
   <img width="200" height="200" src="/profile.svg" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
