Cambios en mi Perfil y Skills

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -4,69 +4,69 @@ import { manifest } from "astro:ssr-manifest";
 const skills = [
   {
     name: "HTML",
-    image: "/src/skill.img/html5.svg", 
+    image: "/html5.svg", 
     porcentage: 90,
   },
   {
     name: "CSS",
-    image: "/src/skill.img/css.svg", 
+    image: "/css.svg", 
     porcentage: 80,
   },
   {
     name: "JavaScript",
-    image: "/src/skill.img/javascript.svg", 
+    image: "/javascript.svg", 
     porcentage: 80,
   },
   {
     name: "React",
-    image: "/src/skill.img/react.svg", 
+    image: "/react.svg", 
     porcentage: 75,
   },
   {
     name: "Node.js",
-    image: "/src/skill.img/nodejs.svg",
+    image: "/nodejs.svg",
     porcentage: 80,
   },
   {
     name: "Java",
-    image: "/src/skill.img/java.svg",
+    image: "/java.svg",
     porcentage: 80,
   },
   {
     name: "C#",
-    image: "/src/skill.img/csharp.svg",
+    image: "/csharp.svg",
     porcentage: 60, 
   },
   {
     name: "MySQL",
-    image: "/src/skill.img/mysql.svg",
+    image: "/mysql.svg",
     porcentage: 80,
   },
   {
     name: "PHP",
-    imageLight: "/src/skill.img/php_lightsvg.svg",
-    imageDark: "/src/skill.img/php_dark.svg",
+    imageLight: "/php_lightsvg.svg",
+    imageDark: "/php_dark.svg",
     porcentage: 60 
   },
   {
     name: "MongoDB",
-    image: "/src/skill.img/mongodb.svg",
+    image: "/mongodb.svg",
     porcentage: 80,
   },
   {
     name: "Express",
-    imageLight: "/src/skill.img/Express.js_light.svg",
-    imageDark: "/src/skill.img/Express.js_dark.svg",
+    imageLight: "/Express.js_light.svg",
+    imageDark: "/Express.js_dark.svg",
     porcentage: 80,
   },
   {
     name: "TailwindCSS",
-    image: "/src/skill.img/tailwindcss.svg",
+    image: "/tailwindcss.svg",
     porcentage: 75,
   },
   {
     name: "Git",
-    image: "/src/skill.img/git.svg",
+    image: "/git.svg",
     porcentage: 85,
   },
 ];
