Cambios y modificaciones en Hero y background

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,15 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Experience from "../components/Experience.astro";
-import SectionContainer from '../components/SectionContainer.astro'
-import SuitCase from '../components/Icons/SuitCase.astro'
-import Code from "../components/Icons/Code.astro";
-import Projects from '../components/Projects.astro'
-import AboutMe from "../components/AboutMe.astro";
-import ProfileCheck from "../components/Icons/ProfileCheck.astro";
-import Hero from '../components/Hero.astro'
-import Skills from "../components/Skills.astro";
-import Brand from '../components/Icons/Brand.astro'
+import Experience from "../components/social/Experience.astro";
+import SectionContainer from '../components/browser/SectionContainer.astro'
+import SuitCase from '../components/icons/SuitCase.astro'
+import Code from "../components/icons/Code.astro";
+import Projects from '../components/social/Projects.astro'
+import AboutMe from "../components/social/AboutMe.astro";
+import ProfileCheck from "../components/icons/ProfileCheck.astro";
+import Hero from '../components/browser/Hero.astro'
+import Skills from "../components/social/Skills.astro";
+import Brand from '../components/icons/Brand.astro'
 ---	
 
 <Layout
