--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
 import "@fontsource-variable/onest"
 
-import Header from "../components/Header.astro"
-import Footer from "../components/Footer.astro"
+import Header from "../components/browser/Header.astro"
+import Footer from "../components/browser/Footer.astro"
 import { ViewTransitions } from "astro:transitions"
 
 interface Props {
@@ -27,13 +27,11 @@ const { description, title } = Astro.props
 
   <body class="relative text-black dark:text-white">
     <div
-  class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-50 dark:bg-gray-950
-  bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(216,166,145,0.5),rgba(255,255,255,0.9))]
-  dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(128,87,74,0.3),rgba(255,255,255,0))]"
->
-</div>
-
-
+    class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-teal-50 dark:bg-gray-950
+    bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(64,224,208,0.5),rgba(255,255,255,0.8))]
+    dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(0,128,128,0.3),rgba(0,0,0,0))]"
+  >
+  </div>
     <Header />
     <slot />
     <Footer />
