Cambios en UI, agregando descripciones y habilidades

--- a/src/components/browser/Hero.astro
+++ b/src/components/browser/Hero.astro
@@ -6,8 +6,8 @@ const personalImageAlt = "Juan Pablo";
 // import SocialPill from "../components/SocialPill.astro";
 
 import Badge from "./Badge.astro";
-import LinkedInIcon from "../icons/Linkedin.astro";
-import MailIcon from "../icons/Mail.astro";
+import LinkedInIcon from "../Icons/Linkedin.astro";
+import MailIcon from "../Icons/Mail.astro";
 import SocialPill from "../social/SocialPill.astro";
 ---
 
