--- a/src/components/browser/ThemeToggle.astro
+++ b/src/components/browser/ThemeToggle.astro
@@ -1,8 +1,13 @@
 ---
 
-import SunIcon from "../icons/SunIcon.astro"
-import MoonIcon from "../icons/MoonIcon.astro"
-import SystemIcon from "../icons/SystemIcon.astro"
+// import SunIcon from "../icons/SunIcon.astro"
+// import MoonIcon from "../icons/MoonIcon.astro"
+// import SystemIcon from "../icons/SystemIcon.astro"
+
+
+import SunIcon from "../Icons/SunIcon.astro"
+import MoonIcon from "../Icons/MoonIcon.astro"
+import SystemIcon from "../Icons/SystemIcon.astro"
 
 const THEMES = ["Light", "Dark", "System"]
 ---
