--- a/src/components/social/Experience.astro
+++ b/src/components/social/Experience.astro
@@ -6,7 +6,7 @@ const EXPERIENCIE = [
     date: "Actualmente...",
     title: "Analista Programador en Aplicaciones Web y de Escritorio",
     description:
-      "Actualmente, soy un desarrollador junior con un enfoque en la creación y desarrollo de aplicaciones web utilizando MERN stack (MongoDB, Express.js, React.js, Node.js), así como otros lenguajes y tecnologías como JavaScript, HTML, CSS, Java, MongoDB y MySQL. Me apasiona construir soluciones innovadoras y funcionales para diversas plataformas",
+       "Desarrollador web con experiencia en MERN stack y tecnologías como JavaScript, HTML, CSS, Java, MongoDB, MySQL, C# y PHP. Apasionado por crear aplicaciones funcionales e innovadoras, tanto web como de escritorio.",
   },
   {
     date: "Noviembre 2024",
