--- a/src/components/social/Projects.astro
+++ b/src/components/social/Projects.astro
@@ -1,18 +1,18 @@
 ---
-import GitHub from "../icons/Github.astro";
-import NextJS from "../icons/NextJS.astro";
-import Tailwind from "../icons/Tailwind.astro";
-import React from "../icons/React.astro";
-import Mongo from "../icons/Mongo.astro";
+import GitHub from "../Icons/Github.astro";
+import NextJS from "../Icons/NextJS.astro";
+import Tailwind from "../Icons/Tailwind.astro";
+import React from "../Icons/React.astro";
+import Mongo from "../Icons/Mongo.astro";
 import LinkButton from "../link/LinkButton.astro";
-import JavaScript from '../icons/JavaScript.astro';
-import Node from '../icons/Node.astro'
-import Socket from '../icons/Socket.astro'
-import SceneBuilder from '../icons/SceneBuillder.astro'
-import Java from '../icons/Java.astro'
-import MySQL from '../icons/MySQL.astro'
-import Netbeans from "../icons/Netbeans.astro";
-import Css from '../icons/Css.astro'
+import JavaScript from "../Icons/JavaScript.astro";
+import Node from "../Icons/Node.astro";
+import Socket from "../Icons/Socket.astro";
+import SceneBuilder from "../Icons/SceneBuillder.astro";
+import Java from "../Icons/Java.astro";
+import MySQL from "../Icons/MySQL.astro";
+import Netbeans from "../Icons/Netbeans.astro";
+import Css from "../Icons/Css.astro";
 
 const TAGS = {
   NEXT: {
