--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,18 @@
 import Layout from "../layouts/Layout.astro";
 import Experience from "../components/social/Experience.astro";
 import SectionContainer from '../components/browser/SectionContainer.astro'
-import SuitCase from '../components/icons/SuitCase.astro'
-import Code from "../components/icons/Code.astro";
+// import SuitCase from '../components/icons/SuitCase.astro'
+import SuitCase from "../components/Icons/SuitCase.astro";
+import Code from "../components/Icons/Code.astro";
+// import Code from "../components/icons/Code.astro";
 import Projects from '../components/social/Projects.astro'
 import AboutMe from "../components/social/AboutMe.astro";
-import ProfileCheck from "../components/icons/ProfileCheck.astro";
+import ProfileCheck from "../components/Icons/ProfileCheck.astro";
+// import ProfileCheck from "../components/icons/ProfileCheck.astro";
 import Hero from '../components/browser/Hero.astro'
 import Skills from "../components/social/Skills.astro";
-import Brand from '../components/icons/Brand.astro'
+import Brand from "../components/Icons/Brand.astro";
+// import Brand from '../components/icons/Brand.astro'
 ---	
 
 <Layout
