--- a/src/components/browser/Footer.astro
+++ b/src/components/browser/Footer.astro
@@ -10,8 +10,7 @@ const currentYear = new Date().getFullYear()
   >
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >© {currentYear}
-      <a href="" class="hover:underline">Juan Pablo</a>. Casi
-      todos los derechos reservados
+      <a href="" class="hover:underline">Juan Pablo</a>. Todos los derechos reservados
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
